--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
+
 <body>
 
-    <div style="text-align: center">
-        <h1>Make following the news easier</h1>
-        <p>If you're like me, you have trouble reading pages of text for a long time. This takes the top posts on Medium and provides 
-        a summary in 10 or fewer sentences.</p>
+    <div id="intro">
+        <h1><b>Make following the news easier</b></h1>
+        <p>Top headlining news articles summarized in real time</p>
     </div>
 
+    <h1>Top Headlines</h1>
     {{ range .}}
-    <p>Title: {{.Title}}</p>
-    <p>Author: {{.Author}}</p>
-    <p>Description: {{.Desc }}</p>
-    <a href="{{.URL}}" target="_blank">Link to the article</a>
-    <img src="{{.URLImage}}" height="250" width="250"></img>
+    <div id="topHeadline">
+            <img src="{{.URLImage}}" height="150" width="150"></img>
+        <h2 id="title">{{.Title}}</h2>
+        <p id="author">{{.Author}}</p>
+        <p>{{.Desc }}</p>
+        <a href="{{.URL}}" target="_blank">Link to the article</a>
+    </div>
     {{end}}
 
+    <h1>Sports</h1>
+
+
 </body>
+
 </html>
