--- a/templates/styles/style.css
+++ b/templates/styles/style.css
@@ -6,8 +6,11 @@
 #topHeadline {
     border: 1px solid gray;
     margin-top: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
     padding: 20px;
     overflow: hidden;
+    border-radius: 30px;
 }
 
 #topHeadline h2 {
