--- a/templates/styles/style.css
+++ b/templates/styles/style.css
@@ -8,7 +8,6 @@
     margin-top: 15px;
     margin-left: 10px;
     margin-right: 10px;
-    padding: 20px;
     overflow: hidden;
     border-radius: 30px;
 }
@@ -21,4 +20,8 @@
 #topHeadline img {
     margin-right: 15px;
     float: left;
+}
+
+#topHeadline:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
 }
