--- a/templates/styles/style.css
+++ b/templates/styles/style.css
@@ -6,10 +6,11 @@
 #topHeadline {
     border: 1px solid gray;
     margin-top: 15px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 250px;
+    margin-right: 250px;
     overflow: hidden;
-    border-radius: 30px;
+    padding-top: 20px;
+    padding-bottom: 90px;
 }
 
 #topHeadline h2 {
@@ -19,9 +20,15 @@
 
 #topHeadline img {
     margin-right: 15px;
+    padding-left: 20px;
     float: left;
 }
 
 #topHeadline:hover {
     box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
+p {
+    text-decoration: none !important;
+    color: black;
 }
