summary added, still need to fix styling and algorithm

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,14 +36,15 @@
                 <p id="datePublished">Date published: {{.Date}}</p>
                 <p>Top Keywords: {{.Keywords}}</p>
             </div>
-            <p id="summarizedText">This is a test</p>
+            <p id="summarizedText">{{.Summary}}</p>
+            <p>Reduced text by: </p>
         </div>
         </a>
         {{end}}
     </div>
 
     <footer>
-        <p>Made with &hearts; from Toronto</p>
+        <p style="color:white; font-family:'Roboto Slab';">Made with &hearts; from Toronto</p>
     </footer>
           
 </body>
