--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,11 @@
         <p>Top headlining news articles from major outlets readily summarized</p>
     </div>
 
+    <div id="checkboxes">
+        <input type="checkbox">CNN<br>
+        <input type="checkbox">TIMES<br>
+    </div>
+
     <div>
         {{ range .}}
         <a href="{{.URL}}" target="_blank" style="text-decoration:none">
@@ -43,7 +48,7 @@
     </div>
 
     <footer>
-        <p style="color:white; font-family:'Roboto Slab';">Made with &hearts; from Toronto</p>
+        <p style="color:white; font-family:'Roboto Slab';">Made with ❤️ in Toronto</p>
     </footer>
           
 </body>
