routing for BBC news

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
         <p>Top headlining news articles from major outlets readily summarized</p>
     </div>
 
-    <div id="checkboxes">
+    <!-- <div id="checkboxes">
         <input type="checkbox">CNN<br>
         <input type="checkbox">TIMES<br>
-    </div>
+    </div> -->
 
     <div>
         {{ range .}}
