--- a/templates/intro.html
+++ b/templates/intro.html
@@ -5,9 +5,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>goRead</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <title>Go read</title>
 </head>
 <body>
-  <p> im jon</p>
+
+  <!-- <header>
+        <h2>goRead</h2>
+    </header> -->
+
+    <div id="intro">
+        <h1><b>Make following the news easier</b></h1>
+        <p>Top headlining news articles from major outlets readily summarized</p>
+    </div>
+
+    <div class="grid-container">
+        <div class="grid-item"><img src="newsIcons/cnn.png" width="120px"></div>
+        <div class="grid-item"><img src="newsIcons/bbc.png" width="120px"></div>
+        <div class="grid-item"><img src="newsIcons/buzzfeed.png" width="120px"></div>  
+        <div class="grid-item"><img src="newsIcons/cbc.png" width="120px"></div>
+        <div class="grid-item"><img src="newsIcons/natgeo.png" width="120px"></div>
+        <div class="grid-item"><img src="newsIcons/reuters.png" width="120px"></div>  
+        <div class="grid-item"><img src="newsIcons/globe.png" width="120px"></div>
+        <div class="grid-item">8</div>
+        <div class="grid-item">9</div>  
+      </div>
+
+      <!-- <footer>
+          <p style="color:white; font-family:'Roboto Slab';">Made with ❤️ in Toronto</p>
+      </footer> -->
+
 </body>
 </html>
