styling changes for landing page, routes for BBC and CNN

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -10,30 +10,19 @@
 </head>
 <body>
 
-  <!-- <header>
-        <h2>goRead</h2>
-    </header> -->
-
     <div id="intro">
         <h1><b>Make following the news easier</b></h1>
         <p>Top headlining news articles from major outlets readily summarized</p>
     </div>
 
     <div class="grid-container">
-        <div class="grid-item"><img src="newsIcons/cnn.png" width="120px"></div>
-        <div class="grid-item"><img src="newsIcons/bbc.png" width="120px"></div>
+        <a href="http://localhost:8001/CNN"><div class="grid-item"><img src="newsIcons/cnn.png" width="120px"></div></a>
+        <a href="http://localhost:8001/BBCNews"><div class="grid-item"><img src="newsIcons/bbc.png" width="120px"></div></a>
         <div class="grid-item"><img src="newsIcons/buzzfeed.png" width="120px"></div>  
         <div class="grid-item"><img src="newsIcons/cbc.png" width="120px"></div>
-        <div class="grid-item"><img src="newsIcons/natgeo.png" width="120px"></div>
-        <div class="grid-item"><img src="newsIcons/reuters.png" width="120px"></div>  
-        <div class="grid-item"><img src="newsIcons/globe.png" width="120px"></div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>  
+        <div class="grid-item">COMING SOON</div>
+        <div class="grid-item">COMING SOON</div>  
       </div>
-
-      <!-- <footer>
-          <p style="color:white; font-family:'Roboto Slab';">Made with ❤️ in Toronto</p>
-      </footer> -->
 
 </body>
 </html>
