business insider scraper

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <h2>goRead</h2>
+        <a href="http://localhost:8001/"><h2>goRead</h2></a>
     </header>
 
     <div id="hello">
