--- a/templates/intro.html
+++ b/templates/intro.html
@@ -19,7 +19,7 @@
         <a href="http://localhost:8001/CNN"><div class="grid-item"><img src="newsIcons/cnn.png" width="120px"></div></a>
         <a href="http://localhost:8001/BBCNews"><div class="grid-item"><img src="newsIcons/bbc.png" width="120px"></div></a>
         <div class="grid-item"><img src="newsIcons/buzzfeed.png" width="120px"></div>  
-        <div class="grid-item"><img src="newsIcons/cbc.png" width="120px"></div>
+        <a href="http://localhost:8001/CBC"><div class="grid-item"><img src="newsIcons/cbc.png" width="120px"></div></a>
         <a href="http://localhost:8001/BusinessInsider"><div class="grid-item"><img src="newsIcons/businessInsider.png" width="220px" style="margin-top:40px;"></div></a>
         <div class="grid-item">COMING SOON</div>  
       </div>
