styling changes and huffington post route

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <a href="http://localhost:8001/"><h2>goRead</h2></a>
+        <a href="http://localhost:8001/" style="text-decoration:none; color: black;"><h2>goRead</h2></a>
     </header>
 
     <div id="hello">
