--- a/templates/intro.html
+++ b/templates/intro.html
@@ -21,7 +21,7 @@
         <div class="grid-item"><img src="newsIcons/buzzfeed.png" width="120px"></div>  
         <a href="http://localhost:8001/CBC"><div class="grid-item"><img src="newsIcons/cbc.png" width="120px"></div></a>
         <a href="http://localhost:8001/BusinessInsider"><div class="grid-item"><img src="newsIcons/businessInsider.png" width="220px" style="margin-top:40px;"></div></a>
-        <a href="http://localhost:8001/HuffingtonPost"><div class="grid-item">Huffington Post</div></a>
+        <a href="http://localhost:8001/HuffingtonPost"><div class="grid-item"><img src="newsIcons/huffpost.png" width="220px" style="margin-top:40px;"></div></a>
       </div>
 
 </body>
